cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(C_GrafEQ VERSION 1.0)

find_package(glfw3 3.4 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
include_directories(${GLEW_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} main.cpp eval.cpp)
target_link_libraries(${PROJECT_NAME} glfw OpenGL::GL GLEW::GLEW)
#add_executable(testeval testeval.cpp eval.cpp)
add_executable(genExpr genexpr.cpp)
